# eval_metrics

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
cmake/: conantools.cmake  config.cmake.in
include/: eval_metrics.hpp  irm.hpp
include/irm/: trec.hpp
test_package/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  test_precision.cpp  test_trec.cpp
tools/: CMakeLists.txt  irm.cpp
